cmake_minimum_required(VERSION 3.28.3)
project(image-host LANGUAGES CXX)
add_executable(${PROJECT_NAME})
target_sources(${PROJECT_NAME} PRIVATE http_parser_wrapper.cc http_parser.cc HttpConnection.cc HttpServer.cc main.cc url.cc util.cc)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)

include(FetchContent)
FetchContent_Declare(MyReactor SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/my-reactor)
FetchContent_Declare(api SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/api)
FetchContent_Declare(db-conn-pool SOURCE_DIR ${CMAKE_CURRENT_DIR}/db-conn-pool)
FetchContent_MakeAvailable(MyReactor api db-conn-pool)
target_link_libraries(${PROJECT_NAME} MyReactor api db-conn-pool)