cmake_minimum_required(VERSION 3.28.3)
project(api LANGUAGES CXX)
add_library(${PROJECT_NAME})
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_sources(${PROJECT_NAME} PRIVATE login.cc register.cc common.cc upload.cc md5.cc myfiles.cc)

include(FetchContent)
FetchContent_Declare(MyReactor SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../my-reactor)
FetchContent_Declare(db-conn-pool SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../db-conn-pool)
FetchContent_Declare(cache-pool SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../cache-pool)
FetchContent_MakeAvailable(MyReactor db-conn-pool cache-pool)
target_link_libraries(${PROJECT_NAME} MyReactor jsoncpp db-conn-pool cache-pool uuid)